@@ -152,6 +152,7 @@ allow = $! $/
 [Variables::RequireLocalizedPunctuationVars]
 [Variables::RequireNegativeIndices]
 
+### Perl::Critic::Moose
 [Moose::ProhibitDESTROYMethod]
 [Moose::ProhibitLazyBuild]
 [Moose::ProhibitMultipleWiths]
@@ -159,6 +160,7 @@ allow = $! $/
 [Moose::RequireCleanNamespace]
 [Moose::RequireMakeImmutable]
 
+### Perl::Critic::Freenode
 [Freenode::AmpersandSubCalls]
 [Freenode::ArrayAssignAref]
 [Freenode::BarewordFilehandles]
@@ -181,4 +183,13 @@ allow = $! $/
 [Freenode::Wantarray]
 [Freenode::WarningsSwitch]
 [Freenode::WhileDiamondDefaultAssignment]
+
+### Perl::Critic::More
+#[CodeLayout::RequireASCII]
+#[Editor::RequireEmacsFileVariables]
+#[ErrorHandling::RequireUseOfExceptions]
+[Modules::PerlMinimumVersion]
+[Modules::RequirePerlVersion]
+#[ValuesAndExpressions::RequireConstantOnLeftSideOfEquality]
+#[ValuesAndExpressions::RestrictLongStrings]
 
