@@ -102,6 +102,8 @@ on 'develop' => sub {
   requires "Perl::Critic::Policy::Freenode::Wantarray" => "0.024";
   requires "Perl::Critic::Policy::Freenode::WarningsSwitch" => "0.024";
   requires "Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment" => "0.024";
+  requires "Perl::Critic::Policy::Modules::PerlMinimumVersion" => "1.003";
+  requires "Perl::Critic::Policy::Modules::RequirePerlVersion" => "1.003";
   requires "Perl::Critic::Policy::Moose::ProhibitDESTROYMethod" => "1.05";
   requires "Perl::Critic::Policy::Moose::ProhibitLazyBuild" => "1.05";
   requires "Perl::Critic::Policy::Moose::ProhibitMultipleWiths" => "1.05";
